// Original file: ../../../../../protos/backend_service.proto

import type { GrpcPipelinePartToBackends_DONTUSE as _ficus_GrpcPipelinePartToBackends_DONTUSE, GrpcPipelinePartToBackends as _ficus_GrpcPipelinePartToBackends } from '../ficus/GrpcPipelinePartToBackends';

export interface GrpcPredefinedPipelinePartsToBackendsMap_DONTUSE {
  'partsToBackends'?: (_ficus_GrpcPipelinePartToBackends_DONTUSE)[];
}

export interface GrpcPredefinedPipelinePartsToBackendsMap {
  'partsToBackends': (_ficus_GrpcPipelinePartToBackends)[];
}
